--- a/helm/chaos-mesh/templates/chaos-server-configmap.yaml
+++ b/helm/chaos-mesh/templates/chaos-server-configmap.yaml
@@ -1,20 +1,16 @@
-{{- if .Values.chaosServer.create }}
+{{- if .Values.dashboard.create }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "chaos-mesh.name" . }}-chaos-server
+  name: {{ template "chaos-mesh.name" . }}-chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: chaos-server
+    app.kubernetes.io/component: chaos-dashboard
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
 data:
-  {{/*
-     Rather than maintain a comprehensive ConfigMap, we map all sub-keys of the "env" value here.
-     This allows for more flexibility and less Chart churn as Chaos Server evolves.
-    */}}
-  {{- range $envKey, $envVal := .Values.chaosServer.env }}
+  {{- range $envKey, $envVal := .Values.dashboard.env }}
   {{ $envKey | upper }}: {{ $envVal | quote }}
   {{- end }}
 {{- end }}
