--- a/helm/chaos-mesh/templates/chaos-server-deployment.yaml
+++ b/helm/chaos-mesh/templates/chaos-server-deployment.yaml
@@ -1,69 +1,68 @@
-{{- if .Values.chaosServer.create }}
+{{- if .Values.dashboard.create }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: chaos-server
+  name: chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: chaos-server
+    app.kubernetes.io/component: chaos-dashboard
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
 spec:
-  replicas: {{ .Values.chaosServer.replicaCount }}
+  replicas: {{ .Values.dashboard.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
-      app.kubernetes.io/component: chaos-server
+      app.kubernetes.io/component: chaos-dashboard
   template:
     metadata:
       labels:
         app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/component: chaos-server
-    {{- with .Values.chaosServer.podAnnotations }}
+        app.kubernetes.io/component: chaos-dashboard
+    {{- with .Values.dashboard.podAnnotations }}
       annotations:
 {{ toYaml . | indent 8 }}
     {{- end }}
     spec:
-      {{- if .Values.chaosServer.serviceAccount }}
-      serviceAccount: {{ .Values.chaosServer.serviceAccount }}
+      {{- if .Values.dashboard.serviceAccount }}
+      serviceAccount: {{ .Values.dashboard.serviceAccount }}
       {{- end }}
       containers:
-        - name: chaos-server
-          image: {{ .Values.chaosServer.image }}
-          imagePullPolicy: {{ .Values.chaosServer.imagePullPolicy | default "IfNotPresent" }}
+        - name: chaos-dashboard
+          image: {{ .Values.dashboard.image }}
+          imagePullPolicy: {{ .Values.dashboard.imagePullPolicy | default "IfNotPresent" }}
           resources:
-{{ toYaml .Values.chaosServer.resources | indent 12 }}
+{{ toYaml .Values.dashboard.resources | indent 12 }}
           command:
-            - /usr/local/bin/chaos-server
+            - /usr/local/bin/chaos-dashboard
           envFrom:
           - configMapRef:
-              name: {{ template "chaos-mesh.name" . }}-chaos-server
+              name: {{ template "chaos-mesh.name" . }}-chaos-dashboard
           volumeMounts:
           - name: storage-volume
-            mountPath: {{ .Values.chaosServer.persistentVolume.mountPath }}
-            subPath: "{{ .Values.chaosServer.persistentVolume.subPath }}"
-        {{- with .Values.chaosServer.nodeSelector }}
+            mountPath: {{ .Values.dashboard.persistentVolume.mountPath }}
+            subPath: "{{ .Values.dashboard.persistentVolume.subPath }}"
+        {{- with .Values.dashboard.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
       {{- end }}
-      {{- with .Values.chaosServer.affinity }}
+      {{- with .Values.dashboard.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
       {{- end }}
-      {{- with .Values.chaosServer.tolerations }}
+      {{- with .Values.dashboard.tolerations }}
       tolerations:
 {{ toYaml . | indent 8 }}
       {{- end }}
       volumes:
-      {{/* This is where Chaos Server stashes any data it needs to persist. If you use SQLite for your DB, state will go here. */}}
       - name: storage-volume
-      {{- if .Values.chaosServer.persistentVolume.enabled }}
+      {{- if .Values.dashboard.persistentVolume.enabled }}
         persistentVolumeClaim:
-        claimName: {{ if .Values.chaosServer.persistentVolume.existingClaim }}{{ .Values.chaosServer.persistentVolume.existingClaim }}{{- else }}{{ template "chaos-mesh.name" . }}-chaos-server{{- end }}
+        claimName: {{ if .Values.dashboard.persistentVolume.existingClaim }}{{ .Values.dashboard.persistentVolume.existingClaim }}{{- else }}{{ template "chaos-mesh.name" . }}-chaos-dashboard{{- end }}
       {{- else }}
         emptyDir: {}
       {{- end }}
@@ -72,18 +71,18 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: {{ template "chaos-mesh.name" . }}-chaos-server
+  name: {{ template "chaos-mesh.name" . }}-chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: chaos-server
+    app.kubernetes.io/component: chaos-dashboard
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
 spec:
   selector:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: chaos-server
+    app.kubernetes.io/component: chaos-dashboard
   type: NodePort
   ports:
     - protocol: TCP
