--- a/helm/chaos-mesh/templates/chaos-dashboard-configmap.yaml
+++ b/helm/chaos-mesh/templates/chaos-dashboard-configmap.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ template "chaos-mesh.name" . }}-chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
