--- a/helm/chaos-mesh/templates/chaos-dashboard-pvc.yaml
+++ b/helm/chaos-mesh/templates/chaos-dashboard-pvc.yaml
@@ -4,6 +4,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ template "chaos-mesh.name" . }}-chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
