store duration field to event table
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/config/crd/bases/pingcap.com_timechaos.yaml
+++ b/config/crd/bases/pingcap.com_timechaos.yaml
@@ -156,6 +156,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
