--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -184,6 +184,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
@@ -462,6 +464,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
@@ -881,6 +885,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
@@ -1110,6 +1116,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
@@ -1370,6 +1378,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
@@ -1616,6 +1626,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
