--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -186,6 +186,8 @@ spec:
             experiment:
               description: Experiment records the last experiment state.
               properties:
+                duration:
+                  type: string
                 endTime:
                   format: date-time
                   type: string
