--- a/ui/package.json
+++ b/ui/package.json
@@ -9,10 +9,12 @@
     "@material-ui/lab": "^4.0.0-alpha.54",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "d3": "^5.16.0",
     "dayjs": "^1.8.28",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -45,6 +47,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/d3": "^5.7.2",
     "@types/jest": "^25.2.1",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
