--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.54",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "d3": "^5.16.0",
     "dayjs": "^1.8.28",
     "formik": "^2.1.4",
