--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -21,7 +21,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Always
+  imagePullPolicy: IfNotPresent
 
   nameOverride: ""
   fullnameOverride: ""
@@ -51,7 +51,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Always
+  imagePullPolicy: IfNotPresent
   grpcPort: 31767
   httpPort: 31766
 
@@ -91,7 +91,7 @@ dashboard:
   serviceAccount: chaos-controller-manager
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Always
+  imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
 
@@ -251,7 +251,7 @@ webhook:
 bpfki:
   create: false
   image: pingcap/chaos-kernel:latest
-  imagePullPolicy: Always
+  imagePullPolicy: IfNotPresent
   grpcPort: 50051
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
