--- a/helm/chaos-mesh/templates/ingress.yaml
+++ b/helm/chaos-mesh/templates/ingress.yaml
@@ -4,7 +4,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: {{ $name }}-chaos-dashboard
+  name: {{ template "chaos-dashboard.svc" . }}
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
