Add hostNetwork in chaos-daemon-daemonset.yaml (#639)
* support hostNetwork

* execute install.sh

* modify

* Added usage about hostNetwork

* Added usage about hostNetwork

* Added usage about hostNetwork

Co-authored-by: zhouqiang <zhouqiang.cl@gmail.com>
Co-authored-by: ti-srebot <66930949+ti-srebot@users.noreply.github.com>

--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -26,6 +26,9 @@ spec:
 {{ toYaml . | indent 8 }}
     {{- end }}
     spec:
+  {{- if .Values.chaosDaemon.hostNetwork }}
+      hostNetwork: true
+  {{- end }}
       hostIPC: true
       hostPID: true
       containers:
