add grace period for pod kill chaos
Signed-off-by: Gong Mengnan <namco1992@gmail.com>

--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -53,6 +53,14 @@ spec:
                 fraction and a unit suffix, such as "300ms", "-1.5h" or "2h45m". Valid
                 time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
               type: string
+            gracePeriod:
+              description: GracePeriod is used in pod-kill action. It represents the
+                duration in seconds before the pod should be deleted. Value must be
+                non-negative integer. The default value is zero that indicates delete
+                immediately.
+              format: int64
+              minimum: 0
+              type: integer
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
