--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.8.28",
     "formik": "^2.1.4",
     "js-yaml": "^3.14.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.19.1",
@@ -52,6 +53,7 @@
     "@types/d3": "^5.7.2",
     "@types/jest": "^25.2.1",
     "@types/js-yaml": "^3.12.4",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
