--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -21,7 +21,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
 
   nameOverride: ""
   fullnameOverride: ""
@@ -54,7 +54,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
   grpcPort: 31767
   httpPort: 31766
 
@@ -64,7 +64,7 @@ chaosDaemon:
 
   # runtime specifies which container runtime to use. Currently
   # we only supports docker and containerd.
-  runtime: docker
+  runtime: containerd
 
   # socketPath specifies the container runtime socket.
   socketPath: /var/run/docker.sock
@@ -96,7 +96,7 @@ dashboard:
   serviceAccount: chaos-controller-manager
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
 
   nodeSelector: {}
 
@@ -202,7 +202,7 @@ prometheus:
   serviceAccount: prometheus
 
   image: prom/prometheus:v2.18.1
-  imagePullPolicy: IfNotPresent
+  imagePullPolicy: Never
 
   nodeSelector: {}
 
@@ -256,7 +256,7 @@ webhook:
 bpfki:
   create: false
   image: pingcap/chaos-kernel:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
   grpcPort: 50051
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
