--- a/ui/package.json
+++ b/ui/package.json
@@ -14,10 +14,10 @@
     "dayjs": "^1.8.28",
     "formik": "^2.1.4",
     "js-yaml": "^3.14.0",
+    "jsoneditor": "^9.0.3",
     "lodash.debounce": "^4.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-json-view": "^1.19.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -54,6 +54,7 @@
     "@types/d3": "^5.7.2",
     "@types/jest": "^25.2.1",
     "@types/js-yaml": "^3.12.4",
+    "@types/jsoneditor": "^8.6.0",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
