--- a/config/crd/bases/chaos-mesh.org_stresschaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_stresschaos.yaml
@@ -34,6 +34,8 @@ spec:
         spec:
           description: Spec defines the behavior of a time chaos experiment
           properties:
+            containerName:
+              type: string
             duration:
               description: Duration represents the duration of the chaos action
               type: string
