--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -1242,6 +1242,8 @@ spec:
           description: Spec defines the behavior of a time chaos experiment
           properties:
             containerName:
+              description: ContainerName indicates the target container to inject
+                stress in
               type: string
             duration:
               description: Duration represents the duration of the chaos action
