--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "js-yaml": "^3.14.0",
     "jsoneditor": "^9.0.3",
     "lodash.debounce": "^4.0.8",
+    "lodash.groupby": "^4.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -56,6 +57,7 @@
     "@types/js-yaml": "^3.12.4",
     "@types/jsoneditor": "^8.6.0",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.groupby": "^4.6.6",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
