refine build system
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,12 @@
-.github
-_tools
-bin
-*/*/node_modules
-config
-cover.out*
-cover
-doc
-examples
-helm
-images
-manifests
-static
+**
+
+!api
+!cmd
+!controllers
+!pkg
+!hack
+
+!go.mod
+!go.sum
+!Makefile
+!scripts
