add timezone for dashbaord and fix pvc in dashboard
Signed-off-by: huming <humings@gmail.com>

--- a/helm/chaos-mesh/templates/chaos-dashboard-pvc.yaml
+++ b/helm/chaos-mesh/templates/chaos-dashboard-pvc.yaml
@@ -20,6 +20,8 @@ spec:
   storageClassName: "{{ .Values.dashboard.persistentVolume.storageClass }}"
 {{- end }}
 {{- end }}
+  accessModes:
+    - ReadWriteOnce
   resources:
     requests:
       storage: "{{ .Values.dashboard.persistentVolume.size }}"
