--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -80,6 +80,7 @@ rules:
     - timechaos
     - kernelchaos
     - stresschaos
+    - rawpodnetworkchaos
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -146,6 +147,7 @@ rules:
   - timechaos
   - kernelchaos
   - stresschaos
+  - rawpodnetworkchaos
   verbs: ["*"]
 ---
 kind: RoleBinding
