--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -21,7 +21,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
 
   nameOverride: ""
   fullnameOverride: ""
@@ -54,7 +54,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
   grpcPort: 31767
   httpPort: 31766
 
@@ -96,7 +96,7 @@ dashboard:
   serviceAccount: chaos-controller-manager
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
 
   nodeSelector: {}
 
@@ -252,11 +252,12 @@ webhook:
     - networkchaos
     - kernelchaos
     - stresschaos
+    - rawpodnetworkchaos
 
 bpfki:
   create: false
   image: pingcap/chaos-kernel:latest
-  imagePullPolicy: Always
+  imagePullPolicy: Never
   grpcPort: 50051
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
