--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -252,7 +252,7 @@ webhook:
     - networkchaos
     - kernelchaos
     - stresschaos
-    - rawpodnetworkchaos
+    - podnetworkchaos
 
 bpfki:
   create: false
