--- a/config/crd/bases/chaos-mesh.org_podnetworkchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_podnetworkchaos.yaml
@@ -39,7 +39,7 @@ spec:
               items:
                 description: RawIPSet represents an ipset on specific pod
                 properties:
-                  items:
+                  cidrs:
                     description: The contents of ipset
                     items:
                       type: string
@@ -50,7 +50,7 @@ spec:
                   source:
                     type: string
                 required:
-                - items
+                - cidrs
                 - name
                 - source
                 type: object
