--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -29,7 +29,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
@@ -62,7 +62,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
   grpcPort: 31767
   httpPort: 31766
   env: {}
@@ -104,7 +104,7 @@ dashboard:
   serviceAccount: chaos-controller-manager
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nodeSelector: {}
 
@@ -265,7 +265,7 @@ webhook:
 bpfki:
   create: false
   image: pingcap/chaos-kernel:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
   grpcPort: 50051
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
