--- a/.github/workflows/upload_files.yml
+++ b/.github/workflows/upload_files.yml
@@ -1,4 +1,4 @@
-name: Upload install script
+name: Upload chaos mesh crd
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
       - v*
 jobs:
   run:
-    name: Upload install script file
+    name: Upload crd file
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -24,10 +24,14 @@ jobs:
           pip3 install --upgrade setuptools
           pip3 install awscli
           printf "%s\n" ${{ secrets.AWS_ACCESS_KEY }} ${{ secrets.AWS_SECRET_KEY }} ${{ secrets.AWS_REGION }} "json" | aws configure
-      - name: Upload
+      - name: Upload crd file
         run: |
           GIT_TAG=${GITHUB_REF##*/}
           if [[ "$GIT_TAG" == "master" ]]; then
             GIT_TAG="latest"
           fi
-          cloud-assets-utils verify-and-sync install.sh -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}/install.sh
+          cloud-assets-utils verify-and-sync install.sh -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}
+          cloud-assets-utils verify-and-sync manifests/crd.yaml -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}
+          cloud-assets-utils verify-and-sync examples/web-show/deploy.sh -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}/web-show
+          # TODO: delete it
+          cloud-assets-utils verify-and-sync manifests/chaosfs-sidecar.yaml -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}
