--- a/.github/workflows/upload_file.yml
+++ b/.github/workflows/upload_file.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - master
-    tags:
-      - v*
     paths:
+      - install.sh
       - manifests/crd.yaml
       - manifests/chaosfs-sidecar.yaml
+      - examples/web-show/deploy.sh
 jobs:
   run:
     name: Upload crd file
@@ -17,11 +17,6 @@ jobs:
         with:
           # Must use at least depth 2!
           fetch-depth: 2
-      - name: Download cloud_assets_utils
-        run: |
-          curl -L https://github.com/pingcap/cloud-assets-utils/releases/download/v0.2.0/cloud_assets_utils-ubuntu-latest -o cloud_assets_utils
-          chmod +x cloud_assets_utils
-          sudo mv cloud_assets_utils /usr/local/bin/cloud-assets-utils
       - name: Configure awscli
         run: |
           pip3 install --upgrade setuptools
@@ -33,6 +28,8 @@ jobs:
           if [[ "$GIT_TAG" == "master" ]]; then
             GIT_TAG="latest"
           fi
-          cloud-assets-utils verify-and-sync manifests/crd.yaml -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}
+          aws s3 cp install.sh ${{ secrets.AWS_BUCKET_NAME }}/${GIT_TAG}/install.sh
+          aws s3 cp manifests/crd.yaml ${{ secrets.AWS_BUCKET_NAME }}/${GIT_TAG}/crd.yaml
+          aws s3 cp examples/web-show/deploy.sh ${{ secrets.AWS_BUCKET_NAME }}/${GIT_TAG}/web-show/deploy.sh
           # TODO: delete it
-          cloud-assets-utils verify-and-sync manifests/chaosfs-sidecar.yaml -aws true -aws-bucket ${{ secrets.AWS_BUCKET_NAME }} -replace-first-path-to ${GIT_TAG}
+          aws s3 cp manifests/chaosfs-sidecar.yaml ${{ secrets.AWS_BUCKET_NAME }}/${GIT_TAG}/chaosfs-sidecar.yaml
