--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,6 +9,26 @@ rules:
 - apiGroups:
   - chaos-mesh.org
   resources:
+  - dnschaos
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - chaos-mesh.org
+  resources:
+  - dnschaos/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - chaos-mesh.org
+  resources:
   - iochaos
   verbs:
   - create
