chore: add new experiment form validation
Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "d3": "^5.16.0",
     "dayjs": "^1.8.28",
+    "flat": "^5.0.2",
     "formik": "^2.1.4",
     "js-yaml": "^3.14.0",
     "jsoneditor": "^9.0.3",
@@ -53,6 +54,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/d3": "^5.7.2",
+    "@types/flat": "^5.0.1",
     "@types/jest": "^25.2.1",
     "@types/js-yaml": "^3.12.4",
     "@types/jsoneditor": "^8.6.0",
