--- a/config/crd/bases/chaos-mesh.org_podnetworkchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_podnetworkchaos.yaml
@@ -17,7 +17,7 @@ spec:
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: PodNetworkChaos is the Schema for the networkchaos API
+      description: PodNetworkChaos is the Schema for the PodNetworkChaos API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
