--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -1224,7 +1224,7 @@ spec:
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: PodNetworkChaos is the Schema for the networkchaos API
+      description: PodNetworkChaos is the Schema for the PodNetworkChaos API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
