--- a/images/chaos-scripts/Dockerfile
+++ b/images/chaos-scripts/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.10
+FROM alpine:3.12
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
@@ -6,5 +6,5 @@ ARG HTTP_PROXY
 RUN apk add tzdata --no-cache
 RUN mkdir -p /scripts
 
-COPY --from=pingcap/binary /src/scripts/wait-fuse.sh /scripts/wait-fuse.sh
-COPY --from=pingcap/binary /src/scripts/init.sh /scripts/init.sh
+COPY --from=pingcap/binary /scripts/wait-fuse.sh /scripts/wait-fuse.sh
+COPY --from=pingcap/binary /scripts/init.sh /scripts/init.sh
