--- a/config/crd/bases/chaos-mesh.org_iochaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_iochaos.yaml
@@ -36,22 +36,86 @@ spec:
           properties:
             action:
               description: 'Action defines the specific pod chaos action. Supported
-                action: delay / errno / mixed Default action: delay'
+                action: latency / fault / attrOverride'
               enum:
-              - delay
-              - errno
-              - mixed
+              - latency
+              - fault
+              - attrOverride
               type: string
-            addr:
-              description: Addr defines the address for sidecar container.
-              type: string
+            attr:
+              description: Attr defines the overrided attribution
+              properties:
+                atime:
+                  description: Timespec represents a time
+                  properties:
+                    nsec:
+                      format: int64
+                      type: integer
+                    sec:
+                      format: int64
+                      type: integer
+                  required:
+                  - nsec
+                  - sec
+                  type: object
+                blocks:
+                  format: int64
+                  type: integer
+                ctime:
+                  description: Timespec represents a time
+                  properties:
+                    nsec:
+                      format: int64
+                      type: integer
+                    sec:
+                      format: int64
+                      type: integer
+                  required:
+                  - nsec
+                  - sec
+                  type: object
+                gid:
+                  format: int32
+                  type: integer
+                ino:
+                  format: int64
+                  type: integer
+                kind:
+                  description: FileType represents type of a file
+                  type: string
+                mtime:
+                  description: Timespec represents a time
+                  properties:
+                    nsec:
+                      format: int64
+                      type: integer
+                    sec:
+                      format: int64
+                      type: integer
+                  required:
+                  - nsec
+                  - sec
+                  type: object
+                nlink:
+                  format: int32
+                  type: integer
+                perm:
+                  type: integer
+                rdev:
+                  format: int32
+                  type: integer
+                size:
+                  format: int64
+                  type: integer
+                uid:
+                  format: int32
+                  type: integer
+              type: object
             delay:
-              description: "Delay defines the value of I/O chaos action delay. A delay
+              description: Delay defines the value of I/O chaos action delay. A delay
                 string is a possibly signed sequence of decimal numbers, each with
-                optional fraction and a unit suffix, such as \"300ms\". Valid time
-                units are \"ns\", \"us\" (or \"µs\"), \"ms\", \"s\", \"m\", \"h\".
-                \n If `Delay` is empty, the operator will generate a value for it
-                randomly."
+                optional fraction and a unit suffix, such as "300ms". Valid time units
+                are "ns", "us" (or "µs"), "ms", "s", "m", "h".
               type: string
             duration:
               description: Duration represents the duration of the chaos action. It
@@ -61,17 +125,10 @@ spec:
                 time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
               type: string
             errno:
-              description: "Errno defines the error code that returned by I/O action.
-                refer to: https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html
-                \n If `Errno` is empty, the operator will generate an error code for
-                it randomly."
-              type: string
-            layer:
-              description: 'Layer represents the layer of the I/O action. Supported
-                value: fs. Default layer: fs'
-              enum:
-              - fs
-              type: string
+              description: 'Errno defines the error code that returned by I/O action.
+                refer to: https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html'
+              format: int32
+              type: integer
             methods:
               description: 'Methods defines the I/O methods for injecting I/O chaos
                 action. default: all I/O methods.'
@@ -95,7 +152,7 @@ spec:
             percent:
               description: 'Percent defines the percentage of injection errors and
                 provides a number from 0-100. default: 100.'
-              type: string
+              type: integer
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about pods.
@@ -174,11 +231,14 @@ spec:
                 can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
                 from 0-100 to specify the max percent of pods to do chaos action
               type: string
+            volumePath:
+              description: VolumePath represents the mount path of injected volume
+              type: string
           required:
           - action
-          - layer
           - mode
           - selector
+          - volumePath
           type: object
         status:
           description: IoChaosStatus defines the observed state of IoChaos
