--- a/helm/chaos-mesh/templates/webhook-configuration.yaml
+++ b/helm/chaos-mesh/templates/webhook-configuration.yaml
@@ -100,6 +100,7 @@ metadata:
   {{- end }}
 webhooks:
   {{- range $crd := .Values.webhook.CRDS }}
+  {{- if ne $crd "podiochaos" }}
   - clientConfig:
       {{- if $certEnabled }}
       caBundle: Cg==
@@ -122,6 +123,7 @@ webhooks:
           - UPDATE
         resources:
           - {{ $crd }}
+  {{- end }}
   {{- end }}
 
 {{- if $certEnabled }}
