--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -34,22 +34,86 @@ spec:
           properties:
             action:
               description: 'Action defines the specific pod chaos action. Supported
-                action: delay / errno / mixed Default action: delay'
+                action: latency / fault / attrOverride'
               enum:
-              - delay
-              - errno
-              - mixed
+              - latency
+              - fault
+              - attrOverride
               type: string
-            addr:
-              description: Addr defines the address for sidecar container.
-              type: string
+            attr:
+              description: Attr defines the overrided attribution
+              properties:
+                atime:
+                  description: Timespec represents a time
+                  properties:
+                    nsec:
+                      format: int64
+                      type: integer
+                    sec:
+                      format: int64
+                      type: integer
+                  required:
+                  - nsec
+                  - sec
+                  type: object
+                blocks:
+                  format: int64
+                  type: integer
+                ctime:
+                  description: Timespec represents a time
+                  properties:
+                    nsec:
+                      format: int64
+                      type: integer
+                    sec:
+                      format: int64
+                      type: integer
+                  required:
+                  - nsec
+                  - sec
+                  type: object
+                gid:
+                  format: int32
+                  type: integer
+                ino:
+                  format: int64
+                  type: integer
+                kind:
+                  description: FileType represents type of a file
+                  type: string
+                mtime:
+                  description: Timespec represents a time
+                  properties:
+                    nsec:
+                      format: int64
+                      type: integer
+                    sec:
+                      format: int64
+                      type: integer
+                  required:
+                  - nsec
+                  - sec
+                  type: object
+                nlink:
+                  format: int32
+                  type: integer
+                perm:
+                  type: integer
+                rdev:
+                  format: int32
+                  type: integer
+                size:
+                  format: int64
+                  type: integer
+                uid:
+                  format: int32
+                  type: integer
+              type: object
             delay:
-              description: "Delay defines the value of I/O chaos action delay. A delay
+              description: Delay defines the value of I/O chaos action delay. A delay
                 string is a possibly signed sequence of decimal numbers, each with
-                optional fraction and a unit suffix, such as \"300ms\". Valid time
-                units are \"ns\", \"us\" (or \"µs\"), \"ms\", \"s\", \"m\", \"h\".
-                \n If `Delay` is empty, the operator will generate a value for it
-                randomly."
+                optional fraction and a unit suffix, such as "300ms". Valid time units
+                are "ns", "us" (or "µs"), "ms", "s", "m", "h".
               type: string
             duration:
               description: Duration represents the duration of the chaos action. It
@@ -59,17 +123,10 @@ spec:
                 time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
               type: string
             errno:
-              description: "Errno defines the error code that returned by I/O action.
-                refer to: https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html
-                \n If `Errno` is empty, the operator will generate an error code for
-                it randomly."
-              type: string
-            layer:
-              description: 'Layer represents the layer of the I/O action. Supported
-                value: fs. Default layer: fs'
-              enum:
-              - fs
-              type: string
+              description: 'Errno defines the error code that returned by I/O action.
+                refer to: https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html'
+              format: int32
+              type: integer
             methods:
               description: 'Methods defines the I/O methods for injecting I/O chaos
                 action. default: all I/O methods.'
@@ -93,7 +150,7 @@ spec:
             percent:
               description: 'Percent defines the percentage of injection errors and
                 provides a number from 0-100. default: 100.'
-              type: string
+              type: integer
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about pods.
@@ -172,11 +229,14 @@ spec:
                 can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
                 from 0-100 to specify the max percent of pods to do chaos action
               type: string
+            volumePath:
+              description: VolumePath represents the mount path of injected volume
+              type: string
           required:
           - action
-          - layer
           - mode
           - selector
+          - volumePath
           type: object
         status:
           description: IoChaosStatus defines the observed state of IoChaos
@@ -1194,6 +1254,185 @@ spec:
           type: object
       required:
       - spec
+      type: object
+  version: v1alpha1
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.5
+  creationTimestamp: null
+  name: podiochaos.chaos-mesh.org
+spec:
+  group: chaos-mesh.org
+  names:
+    kind: PodIoChaos
+    listKind: PodIoChaosList
+    plural: podiochaos
+    singular: podiochaos
+  scope: Namespaced
+  validation:
+    openAPIV3Schema:
+      description: PodIoChaos is the Schema for the podiochaos API
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          description: PodIoChaosSpec defines the desired state of IoChaos
+          properties:
+            actions:
+              description: Actions are a list of IoChaos actions
+              items:
+                description: IoChaosAction defines an possible action of IoChaos
+                properties:
+                  atime:
+                    description: Timespec represents a time
+                    properties:
+                      nsec:
+                        format: int64
+                        type: integer
+                      sec:
+                        format: int64
+                        type: integer
+                    required:
+                    - nsec
+                    - sec
+                    type: object
+                  blocks:
+                    format: int64
+                    type: integer
+                  ctime:
+                    description: Timespec represents a time
+                    properties:
+                      nsec:
+                        format: int64
+                        type: integer
+                      sec:
+                        format: int64
+                        type: integer
+                    required:
+                    - nsec
+                    - sec
+                    type: object
+                  faults:
+                    description: Faults represents the fault to inject
+                    items:
+                      description: IoFault represents the fault to inject and their
+                        weight
+                      properties:
+                        errno:
+                          format: int32
+                          type: integer
+                        weight:
+                          format: int32
+                          type: integer
+                      required:
+                      - errno
+                      - weight
+                      type: object
+                    type: array
+                  gid:
+                    format: int32
+                    type: integer
+                  ino:
+                    format: int64
+                    type: integer
+                  kind:
+                    description: FileType represents type of a file
+                    type: string
+                  latency:
+                    description: Latency represents the latency to inject
+                    type: string
+                  methods:
+                    description: Methods represents the method that the action will
+                      inject in
+                    items:
+                      type: string
+                    type: array
+                  mtime:
+                    description: Timespec represents a time
+                    properties:
+                      nsec:
+                        format: int64
+                        type: integer
+                      sec:
+                        format: int64
+                        type: integer
+                    required:
+                    - nsec
+                    - sec
+                    type: object
+                  nlink:
+                    format: int32
+                    type: integer
+                  path:
+                    description: Path represents a glob of injecting path
+                    type: string
+                  percent:
+                    description: Percent represents the percent probability of injecting
+                      this action
+                    type: integer
+                  perm:
+                    type: integer
+                  rdev:
+                    format: int32
+                    type: integer
+                  size:
+                    format: int64
+                    type: integer
+                  source:
+                    description: Source represents the source of current rules
+                    type: string
+                  type:
+                    description: IoChaosType represents the type of an IoChaos Action
+                    type: string
+                  uid:
+                    format: int32
+                    type: integer
+                required:
+                - path
+                - percent
+                - type
+                type: object
+              type: array
+            pid:
+              description: Pid represents a running toda process id
+              format: int64
+              type: integer
+            startTime:
+              description: StartTime represents the start time of a toda process
+              format: int64
+              type: integer
+            volumeMountPath:
+              description: 'VolumeMountPath represents the target mount path It must
+                be a root of mount path now. TODO: search the mount parent of any
+                path automatically. TODO: support multiple different volume mount
+                path in one pod'
+              type: string
+          required:
+          - volumeMountPath
+          type: object
       type: object
   version: v1alpha1
   versions:
