--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
 - bases/chaos-mesh.org_timechaos.yaml
 - bases/chaos-mesh.org_kernelchaos.yaml
 - bases/chaos-mesh.org_stresschaos.yaml
-- bases/chaos-mesh.org_HttpFaultchaos.yaml
+- bases/chaos-mesh.org_httpfaultchaos.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
