--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -21,15 +21,15 @@ timezone: "UTC"
 # enableProfiling is a flag to enable pprof in controller-manager and chaos-daemon.
 enableProfiling: true
 
-kubectlImage: bitnami/kubectl:latest
+kubectlImage: bitnami/kubectl:andrew
 
 controllerManager:
   serviceAccount: chaos-controller-manager
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-mesh:andrew
+  imagePullPolicy: IfNotPresent
 
   nameOverride: ""
   fullnameOverride: ""
@@ -61,8 +61,8 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-daemon:andrew
+  imagePullPolicy: IfNotPresent
   grpcPort: 31767
   httpPort: 31766
   env: {}
@@ -103,8 +103,8 @@ dashboard:
 
   serviceAccount: chaos-controller-manager
 
-  image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-dashboard:andrew
+  imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
 
@@ -263,8 +263,8 @@ webhook:
 
 bpfki:
   create: false
-  image: pingcap/chaos-kernel:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-kernel:andrew
+  imagePullPolicy: IfNotPresent
   grpcPort: 50051
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
