split yaml file of dns
Signed-off-by: xiang <xiang13225080@163.com>

--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -98,10 +98,32 @@ chaosDaemon:
 
 dnsServer:
   create: false
+
+  serviceAccount: chaos-dns-server
+  
   image: coredns/coredns:latest # TODO: use image build with plugin k8s_dns_chaos
+  
   imagePullPolicy: Always
+
+  nodeSelector: {}
+  
   runtime: docker
+  
   name: dns-server
+
+  resources:
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    limits: {}
+    #  cpu: 500m
+    #  memory: 1024Mi
+    requests:
+      cpu: 100m
+      memory: 70Mi
+    
+    tolerations: []
 
   env:
     LISTEN_HOST: "0.0.0.0"
