fix chaos-dashboard build
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/images/chaos-dashboard/Dockerfile
+++ b/images/chaos-dashboard/Dockerfile
@@ -1,10 +1,10 @@
-FROM alpine:3.12
+FROM debian:buster-slim
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
 ARG UI
 ARG SWAGGER
 
-RUN apk add tzdata --no-cache
+RUN apt-get update && apt-get install tzdata -y && rm -rf /var/lib/apt/lists/*
 
-COPY --from=pingcap/binary /bin/chaos-dashboard /usr/local/bin/chaos-dashboard
+COPY --from=pingcap/chaos-binary /bin/chaos-dashboard /usr/local/bin/chaos-dashboard
