--- a/images/chaos-mesh/Dockerfile
+++ b/images/chaos-mesh/Dockerfile
@@ -5,4 +5,4 @@ ARG HTTP_PROXY
 
 RUN apk add tzdata --no-cache
 
-COPY --from=pingcap/binary /bin/chaos-controller-manager /usr/local/bin/chaos-controller-manager
+COPY --from=pingcap/chaos-binary /bin/chaos-controller-manager /usr/local/bin/chaos-controller-manager
